--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My portfolio</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <h1>My portfolio</h1>
